Fixed screenshot resizing on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -40,8 +40,16 @@ body, html {
 }
 
 .screenshots {
-  height: 600px;
-  width: auto;
+  height: auto;
+  width: 100%;
+}
+
+.padding-top-32 {
+  padding-top: 32px;
+}
+
+.padding-top-64 {
+  padding-top: 64px;
 }
 
 .w3-theme-l5 {color:#000 !important; background-color:#f4f6f9 !important}
